# flda

OpenCV/: build.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/kneron/flda/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CLprocessor.cpp  dnn_face_recognition_ex.cpp  face_landmark_detection_ex.cpp  jni.cpp  native-lib.cpp  testcl.cpp
app/src/main/java/com/kneron/flda/: MainActivity.java  MyGLSurfaceView.java  NativePart.java  Tutorial4Activity.java
app/src/main/res/layout/: activity.xml  activity_main.xml  content_main.xml
app/src/main/res/menu/: menu.xml  menu_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/kneron/flda/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
